--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="container">
+
         <header class="header">
             <div class="title-section">
                 <h1>Kitty Notepad</h1>
@@ -35,7 +36,6 @@
             </div>
         </header>
 
-
         <main class="main-content">
 
             <div class="toolbar">
@@ -53,6 +53,8 @@
                 </button>
             </div>
 
+
+            <div class="editor-container">
                 <textarea 
                     id="notepad" 
                     class="notepad" 
@@ -66,7 +68,7 @@
                 </div>
             </div>
 
-
+   
             <div class="stats-bar">
                 <div class="stat-item">
                     <span class="stat-icon">📝</span>
@@ -88,7 +90,7 @@
 
 
         <footer class="footer">
-            <p>Huthat Project @ 2025 🐾 </p>
+            <p>Huthat Project @ 2025 🐾</p>
         </footer>
     </div>
 
